iRedMail-0.9.8:
    * Supports new distribution release:
        + OpenBSD 6.2. OpenBSD 6.1 is not supported anymore.
        + Ubuntu 17.10. Ubuntu 14.04 LTS, 17.04 are not supported anymore.

    * Drop support for RHEL/CentOS 6, Debian 8.
    * Apache has been removed, Nginx is the only one web server available.

    * Improvements:
        - Integrate 'mlmmj' mailing list manager, and 'mlmmjadmin' RESTful API
          server for easy mlmmj management.

            - mlmmj: http://mlmmj.org/
            - mlmmjadmin: https://bitbucket.org/iredmail/mlmmjadmin/src

        - Remove SQL column: `mailbox.local_part`. It's inherited from
          PostfixAdmin at the very beginning, but not used by any applications,
          time to drop it.
        - SQL table renamed for SQL backends: alias_moderators -> moderators.
        - LDAP backend: Allow mail list account to use 2 attributes: member,
          uniqueMember.
        - Fail2ban: new jail `postfix-pregreet`.
        - Dovecot: Log subject, sender, size in mail deliver log.
        - Amavisd: Add new sql column `maddr.email_raw` and trigger to store
          email address without address extension.

    * Fixed issues:
        - installer:
            - not correctly configure SOGo with IPv6 SQL server address.
              Thanks to Wraptor <nijs.thibaut _at_ gmail.com> for the report in
              forum.
            - not check whether mailbox storage is set to /root.
        - Nginx: Use single config file for default web hosts.
        - SOGo: Cannot sync contacts on Android devices via EAS.
        - Amavisd: cannot store mail subject if contains emoji.
        - SQL backends: User under disabled domain is able to send email with
          smtp protocol.
        - tools/backup_sogo.sh
            - not set correct owner and permission on backup files.
            - cannot remove old backup files.
        - tools/backup_openldap.sh:
            - Cannot log backup result to SQL db.