@@ -43,13 +43,15 @@ export NETDATA_PKG_NAME="netdata-${NETDATA_VERSION}.gz.run"
 export NETDATA_CONF_HEALTH_ALARM_NOTIFY="${NETDATA_CONF_DIR}/health_alarm_notify.conf"
 
 # Plugin config files.
-export NETDATA_CONF_PLUGIN_FAIL2BAN="${NETDATA_CONF_DIR}/python.d/fail2ban.conf"
+#export NETDATA_CONF_PLUGIN_FAIL2BAN="${NETDATA_CONF_DIR}/python.d/fail2ban.conf"
 export NETDATA_CONF_PLUGIN_MYSQL="${NETDATA_CONF_DIR}/python.d/mysql.conf"
-export NETDATA_CONF_PLUGIN_PHPFPM="${NETDATA_CONF_DIR}/python.d/phpfpm.conf"
-export NETDATA_CONF_PLUGIN_NGINX="${NETDATA_CONF_DIR}/python.d/nginx.conf"
+export NETDATA_CONF_PLUGIN_PGSQL="${NETDATA_CONF_DIR}/python.d/postgres.conf"
+#export NETDATA_CONF_PLUGIN_PHPFPM="${NETDATA_CONF_DIR}/python.d/phpfpm.conf"
+#export NETDATA_CONF_PLUGIN_NGINX="${NETDATA_CONF_DIR}/python.d/nginx.conf"
 
 # Log directories and files
-export NETDATA_LOG_DIR='/var/log/netdata'
-export NETDATA_LOG_ACCESSLOG="${NETDATA_LOG_DIR}/access.log"
-export NETDATA_LOG_ERRORLOG="${NETDATA_LOG_DIR}/error.log"
-export NETDATA_LOG_DEBUGLOG="${NETDATA_LOG_DIR}/debug.log"
+export NETDATA_LOG_DIR="${NETDATA_ROOT_DIR}/var/log/netdata"
+
+# Database
+# NETDATA_DB_PASSWD is generated in dialog/optional_components.sh.
+export NETDATA_DB_USER='netdata'
