@@ -26,12 +26,6 @@
     # The frequency in seconds, for data collection.
     update every = 3
 
-    # Log files
-    log directory = PH_NETDATA_LOG_DIR
-    access log = PH_NETDATA_LOG_ACCESSLOG
-    error log = PH_NETDATA_LOG_ERRORLOG
-    debug log = PH_NETDATA_LOG_DEBUGLOG
-
 [plugin:proc]
     # Disable IPVS check since iRedMail doesn't use ipvs by default
     /proc/net/ip_vs/stats = no
