@@ -1,0 +1,5 @@
+socket:
+    name     : 'local'
+    user     : 'PH_NETDATA_DB_USER'
+    password : 'PH_NETDATA_DB_PASSWD'
+    database : 'postgres'
